Wed Apr  8 12:45:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/BindDialog.cpp
        * utils/NamingViewer/BindDialog.h
        * utils/NamingViewer/BindNewContext.cpp
        * utils/NamingViewer/BindNewContext.h
          Unicode fixes

Tue Apr  7 09:01:37 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Sequence_Unit_Tests/clean_tao_export.pl:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:

          Fixed a test that uses specialization of unbounded_value_sequence
          for CORBA::Octet on win32. This test requires that the above
          specialization is compiled into tests code and not imported from
          TAO.dll as it was done before.

Mon Apr  6 13:39:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added 3630 and 3567 has been fixed

        * tests/Bug_3630_Regression/*:
          Added new test for bugzilla 3630, thanks to Steve Ramsay
          <steve dot ramsay at caris dot com> for creating this test

Mon Apr  6 08:19:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/NamingViewer/BindDialog.cpp
        * utils/NamingViewer/BindDialog.h
        * utils/NamingViewer/BindNewContext.cpp
        * utils/NamingViewer/BindNewContext.h
          Fixed unicode compile errors

Mon Apr  6 07:35:16 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/RTCORBA/Priority_Inversion_With_Bands/run_test.pl:
          Fixed time out errors.

Fri Apr  3 13:40:46 UTC 2009  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/Security/mixed_security_test/server.cpp:
          Fixed compilation warnings on LynxOS.

Fri Apr  3 13:33:14 UTC 2009  Olli Savia  <ops@iki.fi>

        * orbsvcs/DevGuideExamples/Security/ParticipatingApp/Messenger_i.h:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_OpenSSL_st_T.inl:
          Fixed compile errors on LynxOS 4.0.
