@@ -1,3 +1,12 @@
+Thu Apr  9 11:01:26 UTC 2009  Vladimir Zykov  <vz@prismtech.com>
+
+        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_nocopy_ut.cpp:
+        * tests/Sequence_Unit_Tests/Sequence_Unit_Tests.mpc:
+
+          There were compile errors on Linux and Solaris builds with
+          previous attempt to fix octet sequence test on Windows. Now
+          those custom build steps are done only on windows builds.
+
 Wed Apr  8 12:45:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * utils/NamingViewer/BindDialog.cpp
